--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,11 @@ body {
     @apply p-5 flex md:justify-center font-mono text-slate-700 dark:text-slate-300;
   }
 
+  thead tr {
+    @apply uppercase sticky z-10 top-0 bg-amber-200 dark:bg-rose-950 shadow-lg dark:shadow-rose-950/50;
+  }
+
+
   th {
     @apply px-2 py-3;
   }
@@ -47,6 +52,14 @@ body {
   }
   th:last-child {
     @apply pr-3;
+  }
+
+  tr {
+    @apply text-center;
+  }
+
+  tbody tr {
+    @apply hover:bg-gray-200 dark:hover:bg-gray-800;
   }
 
   td {
@@ -62,16 +75,4 @@ body {
 
 .theme-toggler {
   @apply bg-gray-400 bg-opacity-30 fixed right-6 bottom-6 hover:bg-opacity-50  active:bg-gray-500;
-}
-
-.thead-tr {
-  @apply uppercase sticky z-10 top-0 bg-amber-200 dark:bg-rose-950 shadow-lg dark:shadow-rose-950/50;
-}
-
-.thead-tr th {
-  @apply sticky z-20 left-0 bg-amber-200 dark:bg-rose-950;
-}
-
-.tbody-tr {
-  @apply text-center hover:bg-gray-200 dark:hover:bg-gray-800;
 }
