--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,7 +83,7 @@ body {
 }
 
 .table-switcher {
-  @apply bg-amber-200 dark:bg-rose-900 hover:bg-amber-300 dark:hover:bg-rose-950 font-bold py-2 px-4 rounded;
+  @apply bg-amber-200 dark:bg-rose-900 hover:bg-amber-300 dark:hover:bg-rose-950 font-bold py-2 px-4 rounded shadow-md dark:shadow-rose-900/50 dark:hover:shadow-rose-950/50;
 }
 
 /* table with grid & div */
