fix: div grid table product col shadow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,7 +55,7 @@ body {
     @apply px-2 py-3;
   }
   th:first-child {
-    @apply pl-3 sticky z-20 left-0 bg-amber-200 dark:bg-rose-950 ;
+    @apply pl-3 sticky z-20 left-0 bg-amber-200 dark:bg-rose-950;
   }
   th:last-child {
     @apply pr-3;
@@ -66,7 +66,7 @@ body {
   }
 
   td {
-    @apply p-2 border-b-2 border-solid border-gray-400;
+    @apply p-2 border-b-2 border-solid border-gray-400 ;
   }
 
   td:last-child {
@@ -99,9 +99,9 @@ body {
 }
 
 .div-row {
-  @apply grid grid-cols-12 gap-2 items-center text-center p-2  border-b-2 border-solid border-gray-400 hover:bg-gray-200 dark:hover:bg-gray-800;
+  @apply grid grid-cols-12 gap-2 items-center text-center border-b-2 border-solid border-gray-400 hover:bg-gray-200 dark:hover:bg-gray-800;
 }
 
 .title-col {
-  @apply col-span-2 sticky left-0 bg-white dark:bg-gray-900;
+  @apply col-span-2 sticky left-0  p-2  bg-white dark:bg-gray-900;
 }
