--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@ body {
   }
 
   td {
-    @apply p-2 border-b-2 border-solid border-gray-400 ;
+    @apply p-2 border-b-2 border-solid border-gray-400;
   }
 
   td:last-child {
@@ -92,10 +92,14 @@ body {
   @apply min-w-[70rem];
 }
 .header {
-  @apply grid grid-cols-12 gap-2 items-center px-2 py-3 text-center font-bold uppercase sticky top-0 bg-amber-200 dark:bg-rose-950 shadow-lg dark:shadow-rose-950/50;
+  @apply grid grid-cols-12 gap-2 items-center h-full text-center font-bold uppercase sticky top-0 bg-amber-200 dark:bg-rose-950 shadow-lg dark:shadow-rose-950/50;
 }
+.header-col {
+  @apply px-2 py-3;
+}
+
 .product-header {
-  @apply col-span-2 sticky left-0 h-full flex justify-center items-center bg-amber-200 dark:bg-rose-950;
+  @apply col-span-2 sticky left-0 h-full flex justify-center items-center bg-amber-200 dark:bg-rose-950 shadow-lg-r dark:shadow-gray-700/50;
 }
 
 .div-row {
